# project-2_Shilenko_Nikolay_M25-555

./: .gitignore  Makefile  README.md  db_meta.json  pyproject.toml
data/: users.json
src/: decorators.py
src/primitive_db/: constants.py  core.py  engine.py  main.py  parser.py  utils.py
