[tool.poetry]
name = "project-2-shilenko-nikolay-m25-555"
version = "0.1.0"
description = ""
authors = ["Nikolai Shilenko <nick.shilenko@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"
